@@ -1,0 +1,27 @@
+Build.PL
+Changes
+LICENSE
+MANIFEST
+META.json
+META.yml
+README
+SIGNATURE
+lib/File/DataClass/Storage/XML.pm
+lib/File/DataClass/Storage/XML/Bare.pm
+lib/File/DataClass/Storage/XML/Simple.pm
+t/01always_pass.t
+t/02pod.t
+t/03podcoverage.t
+t/05kwalitee.t
+t/06yaml.t
+t/07podspelling.t
+t/10test_script.t
+t/20data-class.t
+t/25parse-dtd.t
+t/40xml-bare.t
+t/77multiclass.t
+t/boilerplate.pm
+t/default.json
+t/default.xml
+t/default_en.xml
+t/dtd_test.xml
