@@ -2,11 +2,11 @@ name = File-DataClass-Storage-XML
 
 [Prereqs]
 perl                 = 5.01
-namespace::autoclean = 0.19
-File::DataClass      = v0.44.0
-Moo                  = 1.005000
-XML::Bare            = 0.47
-XML::Simple          = 2.18
+namespace::autoclean = 0.26
+File::DataClass      = v0.63.0
+Moo                  = 2.000001
+XML::Bare            = 0.53
+XML::Simple          = 2.20
 
 [Prereqs / ConfigureRequires]
 version           = 0.88
@@ -34,19 +34,35 @@ license           = http://dev.perl.org/licenses/
 homepage          = https://metacpan.org/author/PJFL
 bugtracker.web    = http://rt.cpan.org/NoAuth/Bugs.html?Dist=File-DataClass-Storage-XML
 bugtracker.mailto = bug-File-DataClass-Storage-XML@rt.cpan.org
-;repository.url   = git://github.com/pjfl/p5-file-dataclass-storage-xml.git
-;repository.web   = http://github.com/pjfl/p5-file-dataclass-storage-xml
-;repository.type  = git
+repository.url    = git://github.com/pjfl/p5-file-dataclass-storage-xml.git
+repository.web    = http://github.com/pjfl/p5-file-dataclass-storage-xml
+repository.type   = git
+
+[ReadmeAnyFromPod / ReadmeMarkdownInRoot]
+filename          = README.md
+location          = root
+type              = markdown
+
+[Run::BeforeBuild]
+run               = cp .build.PL Build.PL
+
+[CopyFilesFromBuild]
+copy              = Build.PL
+move              = cpanfile
+
+[GatherDir]
+exclude_filename  = cpanfile
 
 ; So apparently order matters
 [ReadmeAnyFromPod]
 [Signature]
-[GatherDir]
 [AbstractFromPOD]
 [LicenseFromModule]
 [VersionFromModule]
 [ModuleBuild::Custom]
 [License]
+[CPANFile]
+[MetaConfig]
 [MetaJSON]
 [MetaYAML]
 [ManifestInRoot]
