@@ -1,24 +1,9 @@
-use strict;
-use warnings;
-use File::Spec::Functions qw( catdir catfile updir );
-use FindBin               qw( $Bin );
-use lib               catdir( $Bin, updir, 'lib' );
+use t::boilerplate;
 
-use Test::More;
-use Test::Requires { version => 0.88 };
-use Module::Build;
-
-my $notes = {}; my $perl_ver;
-
-BEGIN {
-   my $builder = eval { Module::Build->current };
-      $builder and $notes = $builder->notes;
-      $perl_ver = $notes->{min_perl_version} || 5.008;
-}
-
-use Test::Requires "${perl_ver}";
 use English qw( -no_match_vars );
 use File::DataClass::IO;
+use File::Spec::Functions qw( catfile );
+use Test::More;
 use Text::Diff;
 
 sub test {
